--- a/pom.xml
+++ b/pom.xml
@@ -65,14 +65,21 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <artifactId>spring-rabbit</artifactId>
     	</dependency>
     	
-        <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-mongodb</artifactId>
-        </dependency>
-        <dependency>
           <groupId>joda-time</groupId>
           <artifactId>joda-time</artifactId>
         </dependency> -->
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
+            
             
 		<!-- Logging with SLF4J & LogBack -->
 		<dependency>
