Adding eleven API and more APIs updates and moving configs to properties by using ConfigurationProperties, tested APIs and worked

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,3 +1,6 @@
 server.port: 9000
 management.port: 9001
 management.address: 127.0.0.1
+database.mongo.dbName: tenuserdb
+database.mongo.dbHost: 127.0.0.1
+database.mongo.dbUserCollection: users
