Pushing security OAuth supports

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -4,3 +4,8 @@ management.address: 127.0.0.1
 database.mongo.dbName: tenuserdb
 database.mongo.dbHost: 127.0.0.1
 database.mongo.dbUserCollection: users
+
+social.config.facebookClientId: 123
+social.config.facebookClientSecrect: 123
+social.config.twitterClientId: 123
+social.config.twitterClientSecret: 123
